--- a/model.ipynb
+++ b/model.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
     "  def forward(self, image):\n",
     "    # layer_1 = self.maxPool2D(F.relu(self.bn_2D(self.inputConv(image))))\n",
     "\n",
-    "    resnet = torchvision.models.resnet18(num_classes=365)\n",
+    "    resnet = torchvision.models.resnet18(num_classes=365, pretrained=True)\n",
     "    resnet.to(device) \n",
     "    resnet.conv1.weight = nn.Parameter(resnet.conv1.weight.sum(dim=1).unsqueeze(1)) \n",
     "    midlevel_resnet = nn.Sequential(*list(resnet.children())[0:6])\n",
@@ -163,17 +163,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch [1 / 20] average error: 0.015539\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "latent_dims = 10    \n",
     "learning_rate = 1e-3\n",
