--- a/model.ipynb
+++ b/model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,23 +26,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "device = torch.device('cuda:0' if torch.cuda.is_available() else 'cpu')\n",
-    "# device = torch.device('cpu')"
+    "device = torch.device('cuda:0' if torch.cuda.is_available() else 'cpu')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "AB_scale = 128\n",
     "img_transform = transforms.Compose([transforms.ToTensor()]) \n",
-    "dataset = utils.LabDataSet('data/general',img_transform, test_size=0.1, height=256, width=256)"
+    "dataset = utils.LabDataSet('data/general',img_transform, train_size= 10000, test_size=100, height=256, width=256)"
    ]
   },
   {
